fixed issue with hidden restaurant name when viewport was too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ nav {
   flex-wrap: wrap;
   width: 100%;
   min-width: 300px;
-  height: 60px;
+  height: 100px;
   background-color: #252831;
   text-align:center;
 }
